// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount /> matches the snapshot 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 jxrqpf"
  >
    <div>
      <div
        class="CartCount__CartCountStyles-sc-xxvp4g-0 hZfsOP count"
      >
        11
      </div>
    </div>
  </span>
</div>
`;

exports[`<CartCount /> updates via props 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 jxrqpf"
  >
    <div>
      <div
        class="CartCount__CartCountStyles-sc-xxvp4g-0 hZfsOP count count-enter-done"
      >
        42
      </div>
    </div>
  </span>
</div>
`;
